--- a/app/src/main/res/layout/perfil_especialista.xml
+++ b/app/src/main/res/layout/perfil_especialista.xml
@@ -37,7 +37,6 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottomNavigationView"
         android:layout_below="@id/txtPerfilEspecialista">
 
         <RelativeLayout
@@ -50,7 +49,7 @@
                 android:layout_height="130dp"
                 android:layout_marginTop="30dp"
                 android:layout_centerHorizontal="true"
-                android:background="@drawable/image_perfil"
+                android:background="@drawable/imagen_login"
                 android:scaleType="fitXY"
                 app:shapeAppearanceOverlay="@style/radius4"/>
 
@@ -65,15 +64,15 @@
 
                 <Button
                     android:id="@+id/btnFoto"
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:drawableEnd="@drawable/ic_editar"
+                    android:drawableEnd="@drawable/ic_addimage"
                     android:layout_marginEnd="15dp"
                     android:text="@string/btn_cargarfoto_perfil"/>
 
                 <Button
                     android:id="@+id/btnEliminar"
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:drawableEnd="@drawable/ic_eliminar"
                     android:text="@string/btn_eliminarfoto_perfil"
@@ -101,22 +100,40 @@
                     android:textSize="20sp"
                     android:layout_marginStart="25dp"/>
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/nombre_especialista_layout"
+                <LinearLayout
                     android:layout_width="347dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal"
                     android:layout_gravity="center"
-                    app:startIconDrawable="@drawable/logo_persona">
+                    android:layout_marginTop="5dp">
 
-                    <EditText
-                        android:id="@+id/edNombre"
-                        android:layout_width="match_parent"
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/nombre_especialista_layout"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        app:startIconDrawable="@drawable/logo_persona">
+
+                        <EditText
+                            android:id="@+id/edNombre"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/image_rectangle1"
+                            android:focusable="false"
+                            android:focusableInTouchMode="false"
+                            android:inputType="none"
+                            android:paddingStart="10dp"
+                            android:paddingTop="15dp" />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <ImageButton
+                        android:layout_marginTop="5dp"
+                        android:id="@+id/btnEditNombre"
+                        android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:paddingStart="10dp"
-                        android:background="@drawable/image_rectangle1"
-                        />
-                </com.google.android.material.textfield.TextInputLayout>
+                        android:src="@drawable/image_pencil"
+                        android:background="?attr/selectableItemBackgroundBorderless"/>
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/txtRut"
@@ -132,22 +149,40 @@
                     android:layout_marginStart="30dp"
                     />
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/rut_especialista_layout"
+                <LinearLayout
                     android:layout_width="347dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal"
                     android:layout_gravity="center"
-                    app:startIconDrawable="@drawable/ic_rut">
+                    android:layout_marginTop="5dp">
 
-                    <EditText
-                        android:id="@+id/edRut"
-                        android:layout_width="match_parent"
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/rut_especialista_layout"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        app:startIconDrawable="@drawable/ic_rut">
+
+                        <EditText
+                            android:id="@+id/edRut"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingStart="10dp"
+                            android:paddingTop="15dp"
+                            android:background="@drawable/image_rectangle1"
+                            android:inputType="none"
+                            android:focusable="false"
+                            android:focusableInTouchMode="false"/>
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <ImageButton
+                        android:layout_marginTop="5dp"
+                        android:id="@+id/btnEditRut"
+                        android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:paddingStart="10dp"
-                        android:background="@drawable/image_rectangle1"
-                        />
-                </com.google.android.material.textfield.TextInputLayout>
+                        android:src="@drawable/image_pencil"
+                        android:background="?attr/selectableItemBackgroundBorderless"/>
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/txtCorreo"
@@ -164,14 +199,20 @@
 
                 <TextView
                     android:id="@+id/edCorreo"
-                    android:layout_width="347dp"
+                    android:layout_width="300dp"
                     android:layout_height="50dp"
                     android:layout_marginTop="5dp"
-                    android:layout_gravity="center"
+                    android:layout_gravity="start"
+                    android:layout_marginStart="23dp"
                     android:drawableStart="@drawable/ic_email"
                     android:drawableTint="@color/gris"
+                    android:drawablePadding="18dp"
                     android:background="@drawable/image_rectangle1"
                     android:paddingStart="10dp"
+                    android:paddingTop="13dp"
+                    android:paddingBottom="10dp"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
                     />
 
                 <TextView
@@ -188,22 +229,39 @@
                     android:layout_marginStart="30dp"
                     />
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/telefono_especialista_layout"
+                <LinearLayout
                     android:layout_width="347dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal"
                     android:layout_gravity="center"
-                    app:startIconDrawable="@drawable/ic_phone2">
+                    android:layout_marginTop="5dp">
 
-                    <EditText
-                        android:id="@+id/edTelefono"
-                        android:layout_width="match_parent"
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/telefono_especialista_layout"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        app:startIconDrawable="@drawable/ic_phone2">
+
+                        <EditText
+                            android:id="@+id/edTelefono"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingStart="10dp"
+                            android:background="@drawable/image_rectangle1"
+                            android:inputType="none"
+                            android:focusable="false"
+                            android:focusableInTouchMode="false"/>
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <ImageButton
+                        android:layout_marginTop="5dp"
+                        android:id="@+id/btnEditTelefono"
+                        android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:paddingStart="10dp"
-                        android:background="@drawable/image_rectangle1"
-                        />
-                </com.google.android.material.textfield.TextInputLayout>
+                        android:src="@drawable/image_pencil"
+                        android:background="?attr/selectableItemBackgroundBorderless"/>
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/TxtEspecialidad"
@@ -219,23 +277,39 @@
                     android:layout_marginStart="30dp"
                     />
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/especialidad_especialista_layout"
+                <LinearLayout
                     android:layout_width="347dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal"
                     android:layout_gravity="center"
-                    app:startIconDrawable="@drawable/logo_inge">
+                    android:layout_marginTop="5dp">
 
-                    <EditText
-                        android:id="@+id/edEspecialidad"
-                        android:layout_width="match_parent"
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/especialidad_especialista_layout"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        app:startIconDrawable="@drawable/logo_inge">
+
+                        <EditText
+                            android:id="@+id/edEspecialidad"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingStart="10dp"
+                            android:background="@drawable/image_rectangle1"
+                            android:inputType="none"
+                            android:focusable="false"
+                            android:focusableInTouchMode="false"/>
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <ImageButton
+                        android:layout_marginTop="5dp"
+                        android:id="@+id/btnEditEspecialidad"
+                        android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:paddingStart="10dp"
-                        android:background="@drawable/image_rectangle1"
-                        />
-                </com.google.android.material.textfield.TextInputLayout>
-
+                        android:src="@drawable/image_pencil"
+                        android:background="?attr/selectableItemBackgroundBorderless"/>
+                </LinearLayout>
 
                 <Button
                     android:id="@+id/btnGuardarPerfilEspecialista"
