--- a/app/src/main/res/layout/historial_servicios.xml
+++ b/app/src/main/res/layout/historial_servicios.xml
@@ -1,6 +1,6 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:background="@color/color_navbar_home"
     android:layout_width="match_parent"
@@ -8,35 +8,66 @@
     tools:context=".MainActivity">
 
     <!-- Header -->
-    <TextView
-        android:id="@+id/header"
+    <RelativeLayout
+        android:id="@+id/header_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Historial"
-        android:textSize="30sp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
         android:background="@color/header"
-        android:gravity="center"
-        android:padding="25dp"
-        />
+        android:padding="25dp">
 
-    <!-- Flecha para volver al menú -->
+        <TextView
+            android:id="@+id/header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Historial de servicios"
+            android:textSize="30sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
+            />
+
+        <!-- Campo de búsqueda dentro del header -->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/search_input_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/header"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            app:startIconDrawable="@drawable/ic_editar">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/search_filter"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Buscar..."
+                android:inputType="text"
+                android:background="@drawable/image_rectangle1"
+                android:padding="10dp"
+                android:paddingStart="42dp"/>
+        </com.google.android.material.textfield.TextInputLayout>
+    </RelativeLayout>
+
     <ImageView
+        android:id="@+id/flechavolver_menu"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginStart="11dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="35dp"
         android:src="@drawable/ic_flechavolver"
-        android:onClick="backMenu"
-        />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:onClick="backMenu"/>
 
     <!-- RecyclerView para las cards de especialistas -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_historial"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/header"
+        android:layout_below="@id/header_layout"
         android:background="@color/white"
         android:padding="10dp"/>
 </RelativeLayout>
