--- a/app/src/main/res/layout/menu_admin.xml
+++ b/app/src/main/res/layout/menu_admin.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/drawable_shape"
-    >
+    android:background="@drawable/drawable_shape">
 
     <TextView
         android:id="@+id/menu_especialista"
@@ -17,9 +16,7 @@
         android:background="@color/header"
         android:gravity="center"
         android:layout_alignParentTop="true"
-        android:padding="25dp"
-        />
-
+        android:padding="25dp" />
 
     <View
         android:id="@+id/rectangle1"
@@ -67,7 +64,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="16dp"
         android:layout_below="@+id/rectangle1"
-        android:onClick="goSpecialists"/>
+        android:onClick="goSpecialists" />
 
     <TextView
         android:id="@+id/myservice"
@@ -79,7 +76,7 @@
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:layout_below="@+id/Perfil"/>
+        android:layout_below="@+id/Perfil" />
 
     <ImageView
         android:id="@+id/ico_user2"
@@ -122,7 +119,7 @@
         android:textSize="16sp"
         android:textStyle="bold"
         android:layout_below="@+id/myservice"
-        android:onClick="goSolicitudes"/>
+        android:onClick="goSolicitudes" />
 
     <ImageView
         android:id="@+id/ico_user3"
@@ -144,6 +141,50 @@
         android:layout_below="@+id/despliege2"
         android:contentDescription="@string/despliege" />
 
+    <!-- Opción Autorizar Especialistas -->
+    <View
+        android:id="@+id/rectangle_auth"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="16dp"
+        android:layout_below="@+id/rectangle3"
+        android:background="@color/white"
+        android:onClick="goAuthorizeSpecialists" />
+
+    <TextView
+        android:id="@+id/auth_specialists"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="50dp"
+        android:text="Autorizar Especialistas"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:layout_below="@+id/Nombre3"
+        android:onClick="goAuthorizeSpecialists" />
+
+    <ImageView
+        android:id="@+id/ico_auth"
+        android:layout_width="27dp"
+        android:layout_height="27dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="50dp"
+        android:src="@drawable/ic_auth"
+        android:layout_below="@+id/ico_user3"
+        android:contentDescription="Autorizar Especialistas" />
+
+    <ImageView
+        android:id="@+id/despliege_auth"
+        android:layout_width="20dp"
+        android:layout_height="22dp"
+        android:layout_marginStart="350dp"
+        android:layout_marginTop="50dp"
+        android:src="@drawable/flecha_desplegable"
+        android:layout_below="@+id/despliege3"
+        android:contentDescription="Desplegar Autorizar Especialistas" />
+
     <View
         android:id="@+id/rectangle4"
         android:background="@color/white"
@@ -151,8 +192,8 @@
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="16dp"
-        android:layout_below="@+id/rectangle3"
-        android:onClick="outSession"/>
+        android:layout_below="@+id/rectangle_auth"
+        android:onClick="outSession" />
 
     <TextView
         android:id="@+id/Nombre4"
@@ -164,16 +205,16 @@
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:layout_below="@+id/Nombre3"/>
+        android:layout_below="@+id/auth_specialists" />
 
     <ImageView
         android:id="@+id/ico_user4"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginStart="23dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="50dp"
         android:src="@drawable/logout"
-        android:layout_below="@+id/ico_user3" />
+        android:layout_below="@+id/ico_auth" />
 
     <ImageView
         android:id="@+id/despliege4"
@@ -182,6 +223,6 @@
         android:layout_marginStart="350dp"
         android:layout_marginTop="50dp"
         android:src="@drawable/flecha_desplegable"
-        android:layout_below="@+id/despliege3" />
+        android:layout_below="@+id/despliege_auth" />
 
 </RelativeLayout>
