--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -1,101 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container_ayuda"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundapp"
-    >
+    android:background="@drawable/backgroundapp">
 
     <TextView
         android:id="@+id/text_contactanos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="124dp"
         android:text="@string/txt_contactanos"
         android:textColor="@color/black"
         android:textSize="46sp"
         android:textStyle="bold"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imgcontactollamar"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_below="@+id/text_contactanos"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
-        android:src="@drawable/ic_phone"
+        android:layout_marginTop="92dp"
         android:onClick="llamar"
-        />
+        android:src="@drawable/ic_phone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_contactanos" />
 
     <Button
         android:id="@+id/btnLlamar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:layout_below="@id/imgcontactollamar"
         android:text="@string/btn_llamar"
         android:textColor="@color/white"
-        android:textSize="22sp" />
+        android:textSize="22sp"
+        app:layout_constraintTop_toBottomOf="@id/imgcontactollamar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageView
         android:id="@+id/imgcontactocorreo"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_below="@+id/btnLlamar"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="36dp"
         android:src="@drawable/ic_mail"
         android:scaleType="centerInside"
-        android:onClick="correoEnviar"/>
+        android:onClick="correoEnviar"
+        app:layout_constraintTop_toBottomOf="@id/btnLlamar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/btnCorreo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:layout_below="@id/imgcontactocorreo"
         android:text="@string/btn_contactar_correo"
         android:textColor="@color/white"
-        android:textSize="22sp" />
+        android:textSize="22sp"
+        app:layout_constraintTop_toBottomOf="@id/imgcontactocorreo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/txtfixit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/btnCorreo"
+        android:layout_marginTop="72dp"
         android:text="@string/fixit_tittle"
-        android:layout_marginTop="40dp"
         android:textColor="@color/black"
         android:textSize="46sp"
         android:textStyle="bold"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnCorreo" />
 
     <TextView
         android:id="@+id/txtserviciosdomicilio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/txtfixit"
         android:text="@string/servicios_a_domicilio"
         android:textColor="@color/black"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        app:layout_constraintTop_toBottomOf="@id/txtfixit"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/txtslogan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/txtserviciosdomicilio"
         android:gravity="center"
         android:text="@string/txt_slogan_help"
         android:textColor="@color/black"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        app:layout_constraintTop_toBottomOf="@id/txtserviciosdomicilio"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
