--- a/app/src/main/res/layout/app_portada.xml
+++ b/app/src/main/res/layout/app_portada.xml
@@ -18,7 +18,7 @@
             android:layout_height="0dp"
             android:src="@drawable/imagen_portada"
             android:scaleType="centerCrop"
-            android:layout_marginTop="110dp"
+            android:layout_marginTop="80dp"
             app:layout_constraintWidth_percent="0.5"
             app:layout_constraintHeight_percent="0.4"
             app:layout_constraintBottom_toTopOf="@+id/textView"
@@ -36,35 +36,24 @@
             android:text="@string/titulo_portada"
             android:textSize="50sp"
             android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            android:fontFamily="sans-serif-black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imagen_portada" />
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/subtitulo_portada"
             android:textSize="25sp"
             android:textStyle="bold"
-            android:layout_marginTop="-10dp"
+            android:fontFamily="sans-serif-black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/descripcion_portada"
-            android:textSize="18sp"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <Button
             android:id="@+id/btnInicio"
@@ -77,7 +66,7 @@
             android:text="@string/texto_boton_portada"
             android:textSize="28sp"
             android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="@+id/textView3"
+            app:layout_constraintTop_toTopOf="@+id/textView2"
             android:onClick="openLogin"/>
 
         <TextView
